--- a/Shopping.Infrastructure/Shopping.Infrastructure.csproj
+++ b/Shopping.Infrastructure/Shopping.Infrastructure.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <PackageReference Include="Bogus" Version="28.4.4" />
+    <PackageReference Include="Microsoft.Extensions.Options" Version="3.1.1" />
   </ItemGroup>
 
   <ItemGroup>
